JP: fixed header spacing at Chris's request

--- a/FormBuilder/src/main/webapp/assets/styles/partials/_header.scss
+++ b/FormBuilder/src/main/webapp/assets/styles/partials/_header.scss
@@ -3,7 +3,7 @@ nav{
   background-color: $color-highlight;
   display: block;
   margin-bottom: 20px;
-  height: 135px;
+  height: 75px;
 }
 .header{
   height: 50px;
